--- a/views/register.ejs
+++ b/views/register.ejs
@@ -25,8 +25,8 @@
         <i class="fa fa-lock"></i>
     </div> -->
 
-    <input type="submit" class="log-btn" value="SIGNUP">
-    <a href="/"><button type="button" class="log-btn" >SIGN UP</button></a>
+    
+    <button type="button" class="log-btn" >SIGN UP</button></a>
     <br><br><p>Already on Ciambella?        
     <a class="link-1" href="/login">Log in</a></p>
   </from>
