--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -79,4 +79,5 @@
     </div>
   
   </section>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js"></script>
 <%- include('partials/footer.ejs') %>
