--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
         <div class="carousel-inner">
             <% slide.forEach(function(slide){ %>
                 <div class="<%= slide.class%>">
-                    <img src="<%= slide.image %>" class="d-block w-100 image-slide" />
+                    <img src="<%= slide.image %>" class="d-block w-20 image-slide" />
                 </div>
                 <% }); %>
         </div>
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="col-md-2 align-self-center">
                         <div>
-                            <h1 class="text-center text-white">2</h1>
+                            <h1 class="text-center text-white">3</h1>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -105,7 +105,7 @@
                 <div class="row">
                     <div class="col-md-2 align-self-center">
                         <div>
-                            <h1 class="text-center text-white">3</h1>
+                            <h1 class="text-center text-white">5</h1>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -137,7 +137,7 @@
                 <div class="row">
                     <div class="col-md-2 align-self-center">
                         <div>
-                            <h1 class="text-center text-white">4</h1>
+                            <h1 class="text-center text-white">7</h1>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -169,7 +169,7 @@
                 <div class="row">
                     <div class="col-md-2 align-self-center">
                         <div>
-                            <h1 class="text-center text-white">5</h1>
+                            <h1 class="text-center text-white">9</h1>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -201,7 +201,7 @@
                 <div class="row">
                     <div class="col-md-2 align-self-center">
                         <div>
-                            <h1 class="text-center text-white">6</h1>
+                            <h1 class="text-center text-white">11</h1>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -235,26 +235,26 @@
                 <div class="row">
                     <div class="col-md-2 align-self-center">
                         <div>
-                            <h1 class="text-center text-white">7</h1>
+                            <h1 class="text-center text-white">2</h1>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-center">
-                            <img src="./images/music1.jpg" class="img-fluid w-100 image-item" />
+                            <a href="/artist/music/melody"><img src="./images/music1.jpg" class="img-fluid w-100 image-item" /></a>
                         </div>
                         
                     </div>
                     <div class="col-md-6">
-                        <div class="row">
+                        <div class="row"><a href="/artist/music/melody">
                             <div class="col-md truncate-text" style="color: #73565e">
-                                <strong>ฝนตกไหม</strong>
+                                <strong>ฝนตกไหม</strong> 
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md text-white truncate-text">
                                 <strong>Three Man Down</strong>
                             </div>
-                        </div>
+                        </div></a>
                         <div class="row">
                             <div class="col-md text-white">
                                 <button type="button" class="btn btn-dark btn-floating btn-sm">
@@ -267,7 +267,7 @@
                 <div class="row">
                     <div class="col-md-2 align-self-center">
                         <div>
-                            <h1 class="text-center text-white">8</h1>
+                            <h1 class="text-center text-white">4</h1>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -299,7 +299,7 @@
                 <div class="row">
                     <div class="col-md-2 align-self-center">
                         <div>
-                            <h1 class="text-center text-white">9</h1>
+                            <h1 class="text-center text-white">6</h1>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -331,7 +331,7 @@
                 <div class="row">
                     <div class="col-md-2 align-self-center">
                         <div>
-                            <h1 class="text-center text-white">10</h1>
+                            <h1 class="text-center text-white">8</h1>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -363,7 +363,7 @@
                 <div class="row">
                     <div class="col-md-2 align-self-center">
                         <div>
-                            <h1 class="text-center text-white">11</h1>
+                            <h1 class="text-center text-white">10</h1>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -470,7 +470,7 @@
                     <div class="row">
                         <div class="col-md-2 align-self-center">
                             <div>
-                                <h1 class="text-center text-white">14</h1>
+                                <h1 class="text-center text-white">15</h1>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -502,7 +502,7 @@
                     <div class="row">
                         <div class="col-md-2 align-self-center">
                             <div>
-                                <h1 class="text-center text-white">15</h1>
+                                <h1 class="text-center text-white">17</h1>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -534,7 +534,7 @@
                     <div class="row">
                         <div class="col-md-2 align-self-center">
                             <div>
-                                <h1 class="text-center text-white">16</h1>
+                                <h1 class="text-center text-white">19</h1>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -568,7 +568,7 @@
                     <div class="row">
                         <div class="col-md-2 align-self-center">
                             <div>
-                                <h1 class="text-center text-white">17</h1>
+                                <h1 class="text-center text-white">14</h1>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -600,7 +600,7 @@
                     <div class="row">
                         <div class="col-md-2 align-self-center">
                             <div>
-                                <h1 class="text-center text-white">18</h1>
+                                <h1 class="text-center text-white">16</h1>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -632,7 +632,7 @@
                     <div class="row">
                         <div class="col-md-2 align-self-center">
                             <div>
-                                <h1 class="text-center text-white">19</h1>
+                                <h1 class="text-center text-white">15</h1>
                             </div>
                         </div>
                         <div class="col-md-4">
