--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,13 +10,13 @@
           <i class="fa fa-user"></i>
         </div>
         <div class="form-group log-status">
-          <input type="password" class="form-control" placeholder="Password" name="Password">
+          <input type="password" class="form-control" placeholder="Password" name="password">
           <i class="fa fa-lock"></i>
         </div>
         <span class="alert">Invalid Credentials</span>
         <a class="link" href="#">Lost your password?</a>
-        <button type="button" class="log-btn" href="/" >Log in</button>
-        <br><br><p>Don't have an account?<a class="link-1" href="/register">  SING UP</a></p> 
+        <button type="sumbit" class="log-btn">Log in</button>
+        <br><br><p>Don't have an account?<a class="link-1" href="/register">  SIGN UP</a></p> 
     </div>
 </form>
 <%- include('partials/footer.ejs') %>
