--- a/views/music.ejs
+++ b/views/music.ejs
@@ -5,7 +5,7 @@
       <div class="row">
           <div class="col-4">
               <div class="d-flex justify-content-end px-2">
-                  <img src="/images/art1.jpg" class="img-fluid" style="width: 150" />
+                  <img src="<%= collection.imageArt %>" class="img-fluid" style="width: 150" />
               </div>
           </div>
           <div class="col-8 d-flex align-items-center">
@@ -29,21 +29,22 @@
               </div>
               <div class="col-3 align-self-center">
                   <div class="text-center">
-                      <a href="/login"><img src="/images/music1.jpg" class="img-fluid image-item" /></a>
+                      <a href="/artist/music/melody"><img src="<%= collection.imageMu %>" class="img-fluid image-item" /></a>
                   </div>
               </div>
               <div class="col-5 align-self-center">
-                <a href="/login"><div class="truncate-text">ฝนตกไหม</div>
-                  <div class="truncate-text">Three man down</div></a>
+                <a href="/artist/music/melody"><div class="truncate-text"><%= collection.music %></div>
+                  <div class="truncate-text"><%= collection.artist %></div></a>
               </div>
               <div class="col-2 align-self-center">
                   <div class="d-flex justify-content-end">
-                      <a href="#">
+                      <a href="/artist/music/payment">
                           <i class="fas fa-download"></i>
                       </a>
                   </div>
               </div>
           </div>
+          
           <div class="row border-top">
             <div class="col-2 align-self-center">
                 <div class="text-center">2</div>
