--- a/views/partials/h-user.ejs
+++ b/views/partials/h-user.ejs
@@ -75,12 +75,40 @@
                     </button>
                     <input type="text" class="form-control" placeholder="search" aria-label="Search" />
                 </div>
-      
+                
+                <% if(!currentUser) {%>
                 <div class="d-flex w-auto">
                     <a href="/login"><button type="button" class="btn btn-outline-light btn-rounded btn-sm" data-mdb-ripple-color="dark" >Log in</button></a>
                     <span class="text-white" style="padding: 0 10">|</span>
                     <a href="/register"><button type="button" class="btn btn-outline-light btn-rounded btn-sm" data-mdb-ripple-color="dark" >Sign up</button></a>
                 </div>
+                <% } else { %> 
+                <div class="d-flex w-auto">
+                    <span class="text-white" style="padding: 0 10"><%= currentUser.username %></span>
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-light btn-floating btn-sm" data-mdb-ripple-color="dark" id="dropdownMenuButton" data-mdb-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-user-alt"></i>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="dropdownMenuButton">
+                            <li>
+                                <a class="dropdown-item" href="/profile">
+                                    <i class="fas fa-clipboard-list" style="padding-right: 10;"></i> Edit Profile
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="/playlist">
+                                    <i class="fas fa-record-vinyl" style="padding-right: 10;"></i> Playlist
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="/logout">
+                                    <i class="fas fa-door-open" style="padding-right: 10;" ></i> Log out
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <% } %>
             </div>
         </div>
       </nav>
