--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/herder-register.ejs') %>
 <div class="login-form">
-  <from action="/register" method='POST'>
+  <form action="/register" method='POST'>
     <div id="img_container">
         <img src="https://i.pinimg.com/originals/f8/9a/e1/f89ae15e25a2130d2811cedbe03bdefa.png" />
     </div>
@@ -26,9 +26,9 @@
     </div> -->
 
     
-    <button type="button" class="log-btn" >SIGN UP</button></a>
+    <button type= "submit" class= "log-btn" >SIGN UP</button>
     <br><br><p>Already on Ciambella?        
     <a class="link-1" href="/login">Log in</a></p>
-  </from>
+  </form>
 </div>
 <%- include('partials/footer.ejs') %>
