--- a/views/music.ejs
+++ b/views/music.ejs
@@ -64,6 +64,7 @@
   <div class="row">
       <div class="col-8">
 
+        <% artist.music.forEach(function(music){ %>
           <div class="row border-top">
               <div class="col-2 align-self-center">
                   <div class="text-center">1</div>
@@ -88,7 +89,7 @@
                   </div>
               </div>
           </div>
-         
+          <% }); %> 
 
           
         
