--- a/views/artist.ejs
+++ b/views/artist.ejs
@@ -99,7 +99,7 @@
       <aside>
         <h2 class="name"><%= artist.name %></h2>
         <br><br>
-        <a href='/artist/<%= artist._id %>'>
+        <a href='/artist/<%= artist._id %>/edit'>
           <buttun class="btn1">
             <i class="fa fa-paint-brush" aria-hidden="true"> edit</i>
           </buttun>
