--- a/views/music.ejs
+++ b/views/music.ejs
@@ -11,7 +11,7 @@
           </div>
           <div class="col-8 d-flex align-items-center">
               <div class="row">
-                  <h2 class="text-light">Best of Three man down</h2>
+                  <h2 class="text-light">Best Music</h2>
               </div>
           </div>
       </div>
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class="col-4">
                     <div class="d-flex justify-content-end px-2">
-                        <img src="/images/art1.jpg" class="img-fluid" style="width: 150" />
+                        <img src=" " class="img-fluid" style="width: 150" />
                     </div>
                 </div>
                 <div class="col-8 d-flex align-items-center">
