--- a/views/artist.ejs
+++ b/views/artist.ejs
@@ -1,10 +1,12 @@
 <%- include('partials/h-user.ejs') %>
 
 <br>
-<% if(!currentUser) {%>
-  <h3>Top Arist</h3>
-  <div >
-    <div class="artist" >
+
+<!-- <% if(!currentUser) {%>
+
+<div class="container">
+   <h3>Top Arist</h3>
+   <div class="artist" >
       <% artist.forEach(function(artist){ %>
         <figure class="snip1281 yellow">
           <img src="<%= artist.image %>" alt="sample22" height="170px" width="500px"/>
@@ -15,36 +17,13 @@
         </figure>
       <% }); %>
     </div>
-    </div>
-    <br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br>
+</div>
+ 
 <% } else { %> 
 <% if(currentUser.username != 'admin'){ %>
-  <h3>Top Arist</h3>
-  <div >
+
+<div class="container">
+    <h3>Top Arist</h3>
     <div class="artist" >
       <% artist.forEach(function(artist){ %>
         <figure class="snip1281 yellow">
@@ -56,34 +35,11 @@
         </figure>
       <% }); %>
     </div>
-    </div>
-    <br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br><br>
-    <br>
-    <br>
+</div>
+  
 <% } else { %>  
 
+<div class="container">
   <div class="calendar clearfix">
     <h3>Add Artist
     <a href='/admin/addArt'>
@@ -104,34 +60,102 @@
             <i class="fa fa-paint-brush" aria-hidden="true"> edit</i>
           </buttun>
         </a>
-        <a href='#'>
+        <form id ='delete-from' action='/artist/<%= artist._id %>?_method=DELETE' method ="POST">
           <buttun class="btn2">
-            <i class="fa fa-paint-brush" aria-hidden="true"> Delete</i>
+            <i class="fa fa-trash" aria-hidden="true">  Delete</i>
           </buttun>
-        </a>
+        </form>
       </aside> 
     </article>
 <% }); %>  
   </div>
-
-<% }%>
-
+</div>
 <% } %>
+<% } %>  -->
+
+
+
+
+
+<% if(!currentUser) {%>
+
+	<div class="container">
+	   <h3>Top Arist</h3>
+	   <div class="artist" >
+		  <% artist.forEach(function(artist){ %>
+			<figure class="snip1281 yellow">
+			  <img src="<%= artist.image %>" alt="sample22" height="170px" width="500px"/>
+			  <figcaption>
+				<h2><%= artist.name %></h2>
+			  </figcaption>
+			  <a href="/artist/<%= artist._id %>"></a>
+			</figure>
+		  <% }); %>
+		</div>
+	</div>
+	 
+<% } else { %> 
+<% if(currentUser.username == 'admin'){ %>
+
+	<div class="container">
+		<div class="calendar clearfix">
+			<h3>Add Artist
+				<a href='/admin/addArt'>
+					<i class="fa fa-plus-square"  aria-hidden="true"  >   
+					</i>
+				</a>
+			</h3>
+			  
+		<% artist.forEach(function(artist){ %>
+			<article class="event">
+				<figure>
+					<img src="<%= artist.image %>" alt="sample22" height="100%" width="100%" />
+				</figure>
+				<aside>
+					<h2 class="name"><%= artist.name %></h2>
+					<br><br>
+					<a href='/artist/<%= artist._id %>/edit'>
+					<buttun class="btn1">
+						<i class="fa fa-paint-brush" aria-hidden="true"> edit</i>
+					</buttun>
+					</a>
+					<form id ='delete-from' action='/artist/<%= artist._id %>?_method=DELETE' method ="POST">
+					<buttun class="btn2">
+						<i class="fa fa-trash" aria-hidden="true">  Delete</i>
+					</buttun>
+					</form>
+				</aside> 
+				</article>
+		<% }); %>  
+		</div>
+	</div>
+
+<% } else { %>  
+	<div class="container">
+		<h3>Top Arist</h3>
+		<div class="artist" >
+		   <% artist.forEach(function(artist){ %>
+			 <figure class="snip1281 yellow">
+			   <img src="<%= artist.image %>" alt="sample22" height="170px" width="500px"/>
+			   <figcaption>
+				 <h2><%= artist.name %></h2>
+			   </figcaption>
+			   <a href="/artist/<%= artist._id %>"></a>
+			 </figure>
+		   <% }); %>
+		 </div>
+	</div>
+	<% } %> 
+<% } %> 
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js"></script>
 
-
-
-
-
-
-
-
-
-
-
-
 <style>
+
+#delete-from {
+  display: inline;
+}
+
   h3 {
   position: relative;
   margin-bottom: 2rem;
@@ -327,7 +351,6 @@ body {
 		padding: 0;
 	}
 }
-
-
 </style>
+
 <%- include('partials/footer.ejs') %>
