--- a/views/music.ejs
+++ b/views/music.ejs
@@ -6,7 +6,7 @@
       <div class="row">
           <div class="col-4">
               <div class="d-flex justify-content-end px-2">
-                  <img src="/images/art1.jpg" class="img-fluid" style="width: 150" />
+                  <img src="#" class="img-fluid" style="width: 150" />
               </div>
           </div>
           <div class="col-8 d-flex align-items-center">
@@ -17,26 +17,39 @@
       </div>
   </div>
 </div>
-<% } else { %> 
-<% if(currentUser.username != 'admin'){ %>
-    <div style="padding: 30 0; background-image: url('https://i.pinimg.com/originals/1a/12/e1/1a12e173feaa4a9c5fed7d891ec3dc89.jpg'); background-size: 100% 250px;">
-        <div class="container">
-            <div class="row">
-                <div class="col-4">
-                    <div class="d-flex justify-content-end px-2">
-                        <img src="/images/art1.jpg" class="img-fluid" style="width: 150" />
+
+<div class="container">
+    <h4 class="py-3">เพลงในเพลย์ลิสต์ </h4>
+    <div class="row">
+        <div class="col-8">
+  
+          <% artist.music.forEach(function(music){ %>
+            <div class="row border-top">
+                <div class="col-2 align-self-center">
+                    <div class="text-center">1</div>
+                </div>
+                <div class="col-3 align-self-center">
+                    <div class="text-center">
+                        <a href="/artist/music/melody"><img src="<%= music.imageMu %>" class="img-fluid image-item" /></a>
                     </div>
                 </div>
-                <div class="col-8 d-flex align-items-center">
-                    <div class="row">
-                        <h2 class="text-light">Best of Three man down</h2>
-                    </div>
+                <div class="col-5 align-self-center">
+                  <a href="/artist/music/melody"><div class="truncate-text"><%= music.music %></div>
+                    <div class="truncate-text"><%= music.artist %></div></a>
                 </div>
+            
             </div>
+            <% }); %> 
+  
+            <div class="row border-top"></div>
+            <br>
         </div>
-      </div>
-<% } else { %>  
-    <div style="padding: 30 0; background-image: url('https://i.pinimg.com/originals/1a/12/e1/1a12e173feaa4a9c5fed7d891ec3dc89.jpg'); background-size: 100% 250px;">
+        
+    </div>
+</div>
+<% } else { %> 
+<% if(currentUser.username == 'admin'){ %>
+<div style="padding: 30 0; background-image: url('https://i.pinimg.com/originals/1a/12/e1/1a12e173feaa4a9c5fed7d891ec3dc89.jpg'); background-size: 100% 250px;">
         <div class="container">
             <div class="row">
                 <div class="col-4">
@@ -54,13 +67,10 @@
                 </div>
             </div>
         </div>
-      </div>  
-      <% }%>
-
-<% } %>
+      </div>      
 
 <div class="container">
-  <h4 class="py-3">เพลงในเพลย์ลิสต์ Three man down</h4>
+  <h4 class="py-3">เพลงในเพลย์ลิสต์ </h4>
   <div class="row">
       <div class="col-8">
 
@@ -89,10 +99,7 @@
                   </div>
               </div>
           </div>
-          <% }); %> 
-
-          
-        
+          <% }); %>
         
           <div class="row border-top"></div>
           <br>
@@ -100,6 +107,56 @@
       
   </div>
 </div>
+<% } else { %>  
+    <div style="padding: 30 0; background-image: url('https://i.pinimg.com/originals/1a/12/e1/1a12e173feaa4a9c5fed7d891ec3dc89.jpg'); background-size: 100% 250px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <div class="d-flex justify-content-end px-2">
+                        <img src="#" class="img-fluid" style="width: 150" />
+                    </div>
+                </div>
+                <div class="col-8 d-flex align-items-center">
+                    <div class="row">
+                        <h2 class="text-light">Best Music</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+      
+      <div class="container">
+          <h4 class="py-3">เพลงในเพลย์ลิสต์ </h4>
+          <div class="row">
+              <div class="col-8">
+    
+                <% artist.music.forEach(function(music){ %>
+                    <div class="row border-top">
+                        <div class="col-2 align-self-center">
+                            <div class="text-center">1</div>
+                        </div>
+                        <div class="col-3 align-self-center">
+                            <div class="text-center">
+                                <a href="/artist/music/melody"><img src="<%= music.imageMu %>" class="img-fluid image-item" /></a>
+                            </div>
+                        </div>
+                        <div class="col-5 align-self-center">
+                          <a href="/artist/music/melody"><div class="truncate-text"><%= music.music %></div>
+                            <div class="truncate-text"><%= music.artist %></div></a>
+                        </div>
+                    </div>
+                    <% }); %>
+                  
+                    <div class="row border-top"></div>
+                    <br>
+                </div>
+                
+            </div>
+          </div>
+      
+<% } %>
+
+
 
 
 <!-- MDB -->
