--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,12 +6,12 @@
     </div>
     <br><p><b><i>Sing up for ciambella account.</p1></b></i>
     <div class="form-group ">
-      <input type="text" class="form-control"  name='username' placeholder="Username ">
+      <input type="text" class="form-control"  name='username' placeholder="Username "  required="required">
       <i class="fa fa-user"></i>
     </div>
 
     <div class="form-group log-status">
-        <input type="text" class="form-control" name='email' placeholder="Email" >
+        <input type="text" class="form-control" name='email' placeholder="Email" required="required" >
         <i class="fa fa-envelope"></i>
     </div>
 
